# GameProfect

./: CMakeLists.txt  README.md  main.cpp
Headers/: Animation.h  Entity.h  Game.h  PLayer.h  info.h  menu.h  parser.h  tinyxml2.h
Images/: level.tmx
Source/: Animation.cpp  Entity.cpp  Game.cpp  Player.cpp  menu.cpp  parser.cpp  tinyxml2.cpp
